# Pacman3d

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Pacman3d/: Animation.cpp  Animation.h  AnimationData.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  CMakeLists.txt  Ghost.cpp  Ghost.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pacman3d.cpp  Pacman3d.h  Player.cpp  Player.h
Pacman3d/resources/objects/items/Cute_Tomato_Buddy_OBJ/: Cute_Tomato_Buddy_OBJ.mtl
Pacman3d/resources/objects/player/: Crouched_Walking.dae  Idle.dae  Running.dae
Pacman3d/resources/objects/test_zombie/: Mremireh_O_Desbiens.dae
Pacman3d/resources/objects/zombie/: Mremireh_O_Desbiens.dae  low_crawl.dae  zombie_attack.dae  zombie_neck_bite.dae  zombie_run.dae
Pacman3d/shaders/: skinned.frag  skinned.vert
